# nonebot-plugin-bilibili-live-notify

./: .gitignore  LICENSE  README.md  __init__.py  commands.py  pyproject.toml  store.py  watcher.py
.github/workflows/: ci.yml  publish.yml
bilibili-proxy/: main.py
docs/: development-testing.md  nonebot-marketplace-submission.md
scripts/: smoke_proxy.sh
src/nonebot_plugin_bilibili_live_notify/: __init__.py  adapter_state.py  commands.py  config.py  managed_rooms.py  runtime.py  status.py  store.py  watcher.py
tests/: conftest.py  test_adapter_state.py  test_commands.py  test_managed_rooms.py  test_store.py  test_watcher.py
